--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-REACT_APP_API_URL=http://localhost:3001
-SKIP_PREFLIGHT_CHECK=true
-FAST_REFRESH = false
+REACT_APP_API_URL=https://angel-ws-local.ngrok.io
+NODE_ENV=development
