--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-REACT_APP_API_URL=https://angel-ws-local.ngrok.io
+VITE_USER_API_URL=https://angel-ws-local.ngrok.io
 NODE_ENV=development
+VITE_USER_MOCK_API=true
